--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devserver",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Express server for web development. Stream coffee & stylus.",
   "main": "index.js",
   "scripts": {
@@ -13,12 +13,22 @@
   "keywords": [
     "ExpressJS",
     "CoffeeScript",
-    "Stylus"
+    "Stylus",
+    "Jade"
   ],
   "author": "Mathieu Civel",
   "license": "MIT",
+  "bin": "./server.js",
   "bugs": {
     "url": "https://github.com/mathieucivel/devserver/issues"
   },
-  "homepage": "https://github.com/mathieucivel/devserver"
+  "homepage": "https://github.com/mathieucivel/devserver",
+  "dependencies": {
+    "express": "^4.1.1",
+    "serve-static": "^1.1.0",
+    "commander": "^2.2.0",
+    "connect-livereload": "^0.4.0",
+    "tiny-lr": "0.0.7",
+    "gaze": "^0.6.4"
+  }
 }
