--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "homepage": "https://github.com/mathieucivel/devserver",
   "dependencies": {
     "express": "^4.1.1",
-    "serve-static": "^1.1.0",
     "commander": "^2.2.0",
     "connect-livereload": "^0.4.0",
     "tiny-lr": "0.0.7",
-    "gaze": "^0.6.4"
+    "gaze": "^0.6.4",
+    "coffee-script": "^1.7.1"
   }
 }
