--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "connect-livereload": "^0.4.0",
     "tiny-lr": "0.0.7",
     "gaze": "^0.6.4",
-    "coffee-script": "^1.7.1"
+    "coffee-script": "^1.7.1",
+    "stylus": "^0.44.0"
   }
 }
