abstracted compilation middleware

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tiny-lr": "0.0.7",
     "gaze": "^0.6.4",
     "coffee-script": "^1.7.1",
-    "stylus": "^0.44.0"
+    "stylus": "^0.44.0",
+    "string.prototype.endswith": "^0.2.0"
   }
 }
