--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devserver",
   "version": "0.0.1",
-  "description": "Express server for web development. Stream coffee & stylus.",
+  "description": "Local web server for quick development. LiveReload coffee & stylus.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
