ajout option proxy (get only)

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "coffee-script": "^1.7.1",
     "stylus": "^0.44.0",
     "string.prototype.endswith": "^0.2.0",
-    "colors": "^0.6.2"
+    "colors": "^0.6.2",
+    "request": "^2.36.0"
   }
 }
