--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stylus": "^0.44.0",
     "string.prototype.endswith": "^0.2.0",
     "colors": "^0.6.2",
-    "request": "^2.36.0"
+    "request": "^2.36.0",
+    "less": "^1.7.3"
   }
 }
