--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
   },
   "homepage": "https://github.com/mathieucivel/devserver",
   "dependencies": {
-    "express": "^4.1.1",
-    "commander": "^2.2.0",
-    "connect-livereload": "^0.4.0",
-    "tiny-lr": "0.0.7",
     "gaze": "^0.6.4",
-    "coffee-script": "^1.7.1",
-    "stylus": "^0.44.0",
-    "string.prototype.endswith": "^0.2.0",
     "colors": "^0.6.2",
-    "request": "^2.36.0",
-    "less": "^1.7.3"
+    "tiny-lr": "^0.1.1",
+    "express": "^4.8.7",
+    "request": "^2.40.0",
+    "commander": "^2.3.0",
+    "connect-livereload": "^0.4.0",
+    "string.prototype.endswith": "^0.2.0",
+    "coffee-script": "^1.8.0",
+    "stylus": "^0.48.0",
+    "less": "^1.7.4"
   }
 }
